--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,6 +17,16 @@
         {% if config.RECAPTCHA_ENABLED %}
         <script src="https://www.google.com/recaptcha/api.js" async defer></script>
         {% endif %}
+        
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-CFSRJ79CWS"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-CFSRJ79CWS');
+        </script>
     </head>
     <body class="bg-light">
         {% block navbar %}
